--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "builds": [
         {
-            "src": "wsgi_py",
+            "src": "wsgi.py",
             "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb" }
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.3" }
         }
     ],
     "routes": [
